# geostack3d

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
configs/: default.yaml
geostack3d/: __init__.py  config.py  crs.py  geometry.py  ingest.py  pipeline.py  qa.py  schema.py  spatial.py  validate.py  visualize_pyvista.py
